# twiggy

./: Cargo.toml
.github/workflows/: main.yml
analyze/: Cargo.toml
analyze/analyses/: diff.rs  garbage.rs
analyze/analyses/dominators/: emit.rs  mod.rs
analyze/analyses/monos/: emit.rs  mod.rs
analyze/analyses/paths/: mod.rs  paths_emit.rs
guide/src/: SUMMARY.md
ir/: Cargo.toml  ir.rs
opt/: Cargo.toml  build.rs  definitions.rs  opt.rs
parser/: Cargo.toml  parser.rs
parser/object_parse/: mod.rs
parser/object_parse/compilation_unit_parse/: mod.rs
parser/object_parse/die_parse/: item_name.rs  location_attrs.rs  mod.rs
parser/wasm_parse/: mod.rs
traits/: Cargo.toml  traits.rs
twiggy/: Cargo.toml
