[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Options for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-opt"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.7.0"
edition = "2018"

[lib]
path = "opt.rs"

[build-dependencies]
regex = "1.10"

[dependencies]
anyhow = "1.0"
structopt = { version = "0.3.26" }
twiggy-traits = { version = "=0.7.0", path = "../traits" }

[features]
default = ["emit_csv", "emit_json", "emit_text"]
emit_json = ["twiggy-traits/emit_json"]
emit_text = ["twiggy-traits/emit_text"]
emit_csv = ["twiggy-traits/emit_csv"]
